fix styles for ssr

--- a/servers/frontend-server/src/index.css
+++ b/servers/frontend-server/src/index.css
@@ -656,3 +656,41 @@ article {
     font-style: italic;
     font-size: 1.6em;
     margin: 0; }
+
+  button {
+      border: 1px solid #231f20;
+      border-radius: 3px;
+      background: #fff;
+      margin: 10px;
+      padding: 10px 20px;
+      transition: all linear 0.2s;
+  }
+
+  button:focus {
+      outline: none;
+  }
+
+  button:active {
+      background-color: #1982d1;
+      border: 1px solid #1982d1;
+      color: #fff;
+      transition: all linear 0.2s;
+  }
+
+  button[disabled] {
+      border-color: #ccc;
+      color: #ccc;
+      font-style: italic;
+  }
+
+  button[disabled]:active {
+      background: #fff;
+      border-color: #ccc;
+  }
+
+  footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+  }
